tests/src/correct/test3.stau
main = if True then 2 else 3
