tests/src/type-error/inv-comparison.stau
f :: Int -> Int
f x = if x < True then 5 else 4

main = f 3

